--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,15 +1,11 @@
 <html lang="en">
 	<head>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<title>Layout</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 	</head>
 	<body>
-		<h1>
-			<u> Get a greeting with your name</u>
-		</h1>
-		{% block wrapper %} {% endblock %}
+        <h2>Register yourself</h2>
+		{%block wrapper%} {%endblock%}
 	</body>
 </html>
