--- a/templates/registrants.html
+++ b/templates/registrants.html
@@ -2,7 +2,7 @@
 
 <ul>
 	{% for name in registrants %}
-	<li>{{name}} is registered for {{ registrants['name']}} </li>
+	<li>{{name}} is registered for {{ registrants[name]}}. </li>
 	{% endfor %}
 </ul>
 
